Fix grid and header spacing
Fix the header spacing by hiding the div with hidden content
Fix the row gap to take into account the product tile banners

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Overrides/_scaffolding.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Overrides/_scaffolding.scss
@@ -122,7 +122,7 @@ html {
 }
 
 .row {
-    row-gap: $grid-gutter-width;
+    row-gap: $grid-gutter-width*2;
     & +.row {
         margin-top: $grid-gutter-width;
     }
